# Hexagon

./: CMakeLists.txt  README.md
src/: Board.cpp  Board.h  Game.cpp  Game.h  Menu.cpp  Menu.h  Serialization.h  ai.cpp  ai.h  main.cpp  pallete.h
